<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.pooria.bestoonchi.RequestActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/request_name"
        android:layout_marginTop="68dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/request_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/request_tozihat"
        android:layout_below="@+id/request_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="55dp"
        android:hint="@string/request_tozhihat" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_submit"
        android:id="@+id/request_submit"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/pick_date_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
       />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_expiretime_btn"
        android:id="@+id/pick_date_button"
        android:layout_marginTop="56dp"
        android:layout_below="@+id/request_tozihat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:nestedScrollingEnabled="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_imagepicker"
        android:id="@+id/request_pick_image"
        android:layout_alignTop="@+id/pick_date_button"
        android:layout_toRightOf="@+id/pick_date_button"
        android:layout_toEndOf="@+id/pick_date_button"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Texti"
        android:id="@+id/_message"
        android:layout_below="@+id/request_submit"
        android:layout_toRightOf="@+id/pick_date_button"
        android:layout_toEndOf="@+id/pick_date_button" />

</RelativeLayout>
